--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,3 +73,4 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 add_subdirectory(quadrotor)
+add_subdirectory(quad_leg)
